jfr_flush_event_writer - return value type mismatch

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 24
    • Affects Version/s: 21, 24
    • Component/s: hotspot
    • None
    • jfr
    • b13

      declaration:

      jboolean JNICALL jfr_event_writer_flush(JNIEnv* env, jclass jvm, jobject writer, jint used_size, jint requested_size);

      definition:

      NO_TRANSITION(void, jfr_event_writer_flush(JNIEnv* env, jclass jvm, jobject writer, jint used_size, jint requested_size))
        JfrJavaEventWriter::flush(writer, used_size, requested_size, JavaThread::current());
      NO_TRANSITION_END

            Assignee:
            Markus Grönlund
            Reporter:
            Markus Grönlund
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: