8339149: jfr_flush_event_writer - return value type mismatch