src/hotspot/share/jfr/jni/jfrJniMethod.hpp
@@ -119,7 +119,7 @@ jobject JNICALL jfr_get_event_writer(JNIEnv* env, jclass cls);
 
 jobject JNICALL jfr_new_event_writer(JNIEnv* env, jclass cls);
 
-jboolean JNICALL jfr_event_writer_flush(JNIEnv* env, jclass cls, jobject writer, jint used_size, jint requested_size);
+void JNICALL jfr_event_writer_flush(JNIEnv* env, jclass cls, jobject writer, jint used_size, jint requested_size);
 
 jlong JNICALL jfr_commit(JNIEnv* env, jclass cls, jlong next_position);
 
